<resources>
    <string name="app_name">WalkIn</string>
    <string name="Hint_Username">Username</string>
    <string name="Hint_Password">Password</string>
    <string name="Label_SignIn">Sign in</string>
    <string name="Label_SignUp">Sign up</string>
    <string name="Hint_Email">Email</string>
    <string name="label_welcome">Welcome,</string>
    <string name="type_label">You are logged in as a</string>
    <string name="label_email">Email:</string>
    <string name="label_name">Name:</string>
    <string name="label_password">Password:</string>
    <string name="signupType_label">Account Type</string>
    <string name="switch_off_patient">Patient</string>
    <string name="switch_on_cllinic">Clinic</string>
    <string name="button_submit">Sign up!</string>
    <string name="defaultaccountlabel">Patient</string>
    <string name="label_loggedin_as">You are logged in as a</string>
    <string name="walkin_name">WALK-IN</string>
    <string name="label_proceed">Proceed</string>
    <string name="adminTitle">Admin Terminal</string>
    <string name="label_role">Role:</string>
    <string name="Hint_Role">Role</string>
    <string name="ServiceCreateTitle">Add</string>
    <string name="ServiceListTitle">Current Services</string>
    <string name="signUpTitle">Create Account</string>
    <string name="welcomeTitle">Welcome</string>
    <string name="Remove">Remove</string>
    <string name="Edit">Edit</string>
    <string name="ServiceEditTitle">Edit Service</string>
    <string name="SubmitText">Submit</string>
    <string name="prevRole">Role:</string>
    <string name="btn_editservices">Edit Services</string>
    <string name="editUsers">Edit Users</string>
    <string name="label_type">Type:</string>
    <string name="hint_type">Type</string>
    <string name="UserListTitle">Users</string>
    <string name="Role_input">Role</string>
    <string name="hint_name">Name</string>
    <string name="buttonCancel">Cancel</string>
    <string name="confirmationMessage">You are going to delete this user</string>
    <string name="confirm">Are you sure?</string>
    <string name="radioLabelDoctor">Doctor</string>
    <string name="radioValueNurse">Nurse</string>
    <string name="radioValueStaff">Staff</string>
    <string name="labelName">Company Name</string>
    <string name="labelAddress">Address:</string>
    <string name="labelDescription">Description:</string>
    <string name="labelLicensed">Licensed:</string>
    <string name="typeLabel">Account Type:</string>
    <string name="buttonPatientLabel">Patient</string>
    <string name="buttonClinicLabel">Clinic</string>
    <string name="ClinicTitle">Employee Terminal</string>
    <string name="availabilitySchedule">Schedule</string>
    <string name="buttonlabelAddTime">Add Time</string>
    <string name="pickStartLabel">Start Time:</string>
    <string name="pickEndLabel">End Time:</string>
    <string name="weekdayHint">Weekday</string>
    <string name="Sunday">Sunday</string>
    <string name="Saturday">Saturday</string>
    <string name="Friday">Friday</string>
    <string name="Thursday">Thursday</string>
    <string name="buttonWednesday">Wednesday</string>
    <string name="tuesday">Tuesday</string>
    <string name="Monday">Monday</string>
    <string name="date">Date:</string>
    <string name="confirmationMessageAvail">You are going to delete this availability</string>
</resources>
