<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Clinic_AddTime"
    android:background="@drawable/gradient">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingTop="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/inputDay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="5dp"
                android:backgroundTint="#DDE6E9"
                android:ems="10"
                android:fontFamily="@font/comfortaa_bold"
                android:hint="@string/weekdayHint"
                android:singleLine="true"
                android:textColor="#DDE6E9"
                android:textColorHint="#9FA7B3"
                android:textSize="22dp" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/comfortaa_bold"
                android:text="@string/pickStartLabel"
                android:textColor="#DDE6E9"
                android:textSize="20sp" />

            <TimePicker
                android:id="@+id/pickStartTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/timebox"
                android:fadingEdge="horizontal|vertical"
                android:textSize="22sp"
                android:textStyle="bold"
                android:timePickerMode="spinner" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/comfortaa_bold"
                android:text="@string/pickEndLabel"
                android:textColor="#DDE6E9"
                android:textSize="20sp" />

            <TimePicker
                android:id="@+id/pickEndTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/timebox"
                android:fadingEdge="horizontal|vertical"
                android:textSize="22sp"
                android:timePickerMode="spinner" />

            <Button
                android:id="@+id/submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/button"
                android:clickable="true"
                android:fontFamily="@font/comfortaa_bold"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:text="@string/SubmitText"
                android:textColor="#DDE6E9"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>