<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="15dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/confirmationLnOne"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/confirmationMessageAvail"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/confirmationTwo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:gravity="center"
            android:text="@string/confirm"
            android:textSize="22sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonDeleteAvailability"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:clickable="true"
                android:fontFamily="@font/comfortaa_bold"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:text="Delete"
                android:textColor="#DDE6E9"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonCancelAvailability"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="30dp"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:clickable="true"
                android:fontFamily="@font/comfortaa_bold"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:text="@string/buttonCancel"
                android:textColor="#DDE6E9"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>


</LinearLayout>