<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient"
        android:orientation="vertical"
        android:paddingLeft="50dp"
        android:paddingTop="50dp"
        android:paddingRight="50dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_weight="1"
            android:orientation="vertical">
            m

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="220dp"
                    android:layout_height="220dp"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:foregroundGravity="center"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/profile" />

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_margin="25dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/logo"
                    tools:visibility="visible" />

            </FrameLayout>

            <TextView
                android:id="@+id/Walkin_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/comfortaa_bold"
                android:text="@string/walkin_name"
                android:textAllCaps="true"
                android:textColor="#1FA8AD"
                android:textSize="50sp"
                android:typeface="sans" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/emailInput"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:backgroundTint="#DDE6E9"
                    android:fontFamily="@font/comfortaa_bold"
                    android:gravity="center"
                    android:hint="@string/Hint_Email"
                    android:inputType="textEmailAddress"
                    android:singleLine="true"
                    android:textColor="#DDE6E9"
                    android:textColorHighlight="#DDE6E9"
                    android:textColorHint="#DDE6E9"
                    android:textColorLink="#DDE6E9" />

                <EditText
                    android:id="@+id/InputPassword"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:backgroundTint="#DDE6E9"
                    android:fontFamily="@font/comfortaa_bold"
                    android:gravity="center"
                    android:hint="@string/Hint_Password"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:textColor="#DDE6E9"
                    android:textColorHint="#DDE6E9"
                     />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/Button_SignIn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/button"
                    android:clickable="true"
                    android:fontFamily="@font/comfortaa_bold"
                    android:foreground="?attr/selectableItemBackgroundBorderless"
                    android:text="@string/Label_SignIn"
                    android:textColor="#DDE6E9" />

                <Button
                    android:id="@+id/Button_SignUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="7dp"
                    android:layout_weight="1"
                    android:background="@drawable/button"
                    android:clickable="true"
                    android:fontFamily="@font/comfortaa_bold"
                    android:foreground="?attr/selectableItemBackgroundBorderless"
                    android:text="@string/Label_SignUp"
                    android:textColor="#DDE6E9" />

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>