<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".Main_LoggedIn">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="14dp"
        tools:layout_editor_absoluteY="102dp">

        <LinearLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="102dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/adminTitle2"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_gravity="right|center_horizontal|center_vertical"
                android:layout_marginLeft="15dp"
                android:layout_weight="1"
                android:fontFamily="@font/comfortaa_bold"
                android:gravity="center"
                android:text="@string/adminTitle"
                android:textColor="#DDE6E9"
                android:textSize="34sp"
                android:textStyle="bold"
                android:typeface="normal"
                android:visibility="visible"
                tools:visibility="visible" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_alignParentRight="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/profile"
                app:srcCompat="@drawable/logo"
                tools:srcCompat="@drawable/logo"
                tools:visibility="visible" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="260dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <Space
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/button_editServices"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/button"
                android:clickable="true"
                android:fontFamily="@font/comfortaa_bold"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:text="@string/ServiceEditTitle"
                android:textColor="#DDE6E9"
                android:textStyle="normal|bold" />

            <Button
                android:id="@+id/button_editUsers"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/button"
                android:clickable="true"
                android:fontFamily="@font/comfortaa_bold"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:text="@string/editUsers"
                android:textColor="#DDE6E9"
                android:textStyle="normal|bold" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>